# Copyright (C) 2025 Roberto Rossini <roberros@uio.no>
#
# SPDX-License-Identifier: MIT

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "modle_integration_suite"
version = "0.0.1"
description = "Integration test suite for MoDLE"
authors = [
  {name = "Roberto Rossini", email = "roberros@uio.no"}
]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License"
]

dependencies = [
  "click>=8",
  "colorama==0.4.*",
  "hictkpy[pandas]==1.3.*",
  "immutabledict==4.*",
  "numpy",
  "pandas==2.2.*",
  "PyBigWig==0.3.24",
  "structlog==25.*",
]

optional-dependencies.test = [
  "pytest>=8.0"
]

optional-dependencies.dev = [
  "black",
  "isort",
  "modle_integration_suite[test]",
  "pre-commit",
]

[project.scripts]
modle_integration_suite = "modle_integration_suite:main"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error",
  "ignore:(ast.Str|Attribute s|ast.NameConstant|ast.Num) is deprecated:DeprecationWarning:_pytest",
  "ignore:datetime\\.datetime\\.utcfromtimestamp\\(\\)*:DeprecationWarning",  # https://github.com/pytest-dev/pytest/issues/11528
]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
